# fasthosting

./: Cargo.toml  README.md  app
elf_test/: Cargo.toml  dmp  kek
elf_test/src/: lib.rs  main.rs
fasthosting/: Cargo.toml
fasthosting/src/: main.rs
log0/: Cargo.toml
log0/src/: main.rs
log0_host/: Cargo.toml
log0_host/src/: fmt.rs  leb128.rs  lib.rs  main.rs  parser.rs  tests.rs
log0_target/: Cargo.toml
log0_target/src/: lib.rs  tests.rs
minimal_program/: .gdb_history  Cargo.toml  extra_link.x  memory.x  openocd.gdb  openocd_jlink.cfg  openocd_stlink.cfg
minimal_program/.cargo/: config
minimal_program/src/: main.rs
src/: main.rs
