[package]
name = "elf_test"
version = "0.1.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = "0.23.0"
xmas-elf = "0.7"
anyhow = "1"
structopt = "0.3"
rustc-demangle = "0.1"
fallible-iterator = "0.2.0"
object = "0.23.0"