[package]
name = "log0"
version = "0.1.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#probe-rs = "*"

[dependencies.probe-rs]
# path = "../../probe-rs/probe-rs"
path = "../../probe-rs/probe-rs"
