[package]
name = "log0_host"
version = "0.1.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs = "*"
gimli = "0.20"
xmas-elf = "0.7"
anyhow = "1"
structopt = "0.3"
rustc-demangle = "0.1"
ctrlc = "3.1"

# [dependencies.probe-rs]
# path = "../../probe-rs/probe-rs"
