[package]
authors = ["Emil Fresk <emil@widefind.se>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m-rt             = "0.6.10"
# cortex-m-semihosting    = "0.3.3"
panic-halt              = "0.2.0"
cortex-m                = "0.6.0"
heapless                = "0.5.0"

[dependencies.stm32l4xx-hal]
version = "0.5.0"
features = ["stm32l4x2", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name                    = "app"
test                    = false
bench                   = false

[profile.dev]
debug                   = true
opt-level               = 1
#force-frame-pointers    = true

[profile.release]
incremental             = false # disable incremental build to allow lto on nightly
codegen-units           = 1     # better optimizations
debug                   = true  # symbols are nice and they don't increase the size on Flash
lto                     = true  # better optimizations
